Fixed the error about not showing the first logline

--- a/TestResultHtmlLogger/Resources/style.css
+++ b/TestResultHtmlLogger/Resources/style.css
@@ -51,7 +51,7 @@ top: 0;
 font-style: normal
 }
 div#logfileelements {
-margin-top: 165px;
+margin-top: 195px;
 margin-left: 10px;
 margin-right: 10px;
 }
